<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Klippy</string>
    <string name="settings">Settings</string>
    <string name="ready">Ready</string>
    <string name="push_clipboard">Push Clipboard</string>
    <string name="pull_clipboard">Pull Clipboard</string>
    <string name="server_url">Server URL</string>
    <string name="private_key">Private Key (PGP Armored)</string>
    <string name="public_key">Public Key (PGP Armored)</string>
    <string name="generate_keys">Generate Keys</string>
    <string name="save_settings">Save Settings</string>
    <string name="setup_required">Setup required</string>
    <string name="please_configure_settings">Please configure settings first</string>
    <string name="crypto_not_initialized">Encryption not initialized</string>
    <string name="clipboard_empty">Clipboard is empty</string>
    <string name="encrypting">Encrypting...</string>
    <string name="sending">Sending...</string>
    <string name="push_success">Clipboard pushed successfully</string>
    <string name="push_failed">Failed to push clipboard</string>
    <string name="fetching">Fetching...</string>
    <string name="decrypting">Decrypting...</string>
    <string name="pull_success">Clipboard pulled successfully</string>
    <string name="no_data">No data</string>
    <string name="no_data_on_server">No clipboard data on server</string>
    <string name="error_occurred">Error occurred</string>
    <string name="error">Error</string>
    <string name="server_url_required">Server URL is required</string>
    <string name="keys_required">Both keys are required</string>
    <string name="settings_saved">Settings saved</string>
    <string name="generating">Generating...</string>
    <string name="keys_generated">Keys generated successfully</string>
    <string name="load_private_key_file">Load Private Key File</string>
    <string name="load_public_key_file">Load Public Key File</string>
    <string name="no_key_loaded">No key loaded</string>
    <string name="key_loaded">Key loaded ✓</string>
    <string name="private_key_loaded">Private key loaded</string>
    <string name="public_key_loaded">Public key loaded</string>
    <string name="error_loading_file">Error loading file</string>
    <string name="invalid_server_url">Invalid server URL (use http:// or https://)</string>
    <string name="or_generate_new_keys">Or generate new keys</string>
    <string name="sharing_text">Sharing to Klippy...</string>
</resources>
